; ModuleID = '/home/carl/AnghaBench/freebsd/bin/stty/extr_gfmt.c_gerr.c'
source_filename = "/home/carl/AnghaBench/freebsd/bin/stty/extr_gfmt.c_gerr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [27 x i8] c"illegal gfmt1 option -- %s\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"illegal gfmt1 option\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @gerr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gerr(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = icmp ne i8* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 (i32, i8*, ...) @errx(i32 1, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i8* %6)
  br label %10

8:                                                ; preds = %1
  %9 = call i32 (i32, i8*, ...) @errx(i32 1, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %5
  ret void
}

declare dso_local i32 @errx(i32, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
